# cppoker

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_cmake.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: CMakeLists.txt  main.cpp
src/ClassTest/: CMakeLists.txt  ClassTest.cpp  ClassTest.h
